# Void-Scavenger

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: .const.h.swp  .ship_parts.h.swp  arena.h  audio.h  behavior.h  camera.h  collision.h  console.h  const.h  controls.h  enemy.h  game_over.h  global_vars.h  globals.h  helpers.h  init.h  inventory.h  items.h  lexer.h  load_assets.h  loading.h  main.h  mode.h  obj_wrapper.h  obstacle.h  parser.h  parts.h  player.h  projectile.h  render.h  ship.h  ship_parts.h  station.h  stats.h  tick.h  timers.h
include/engine/: globals.h  ui_component.h
include/structs/: arena_str.h  audio_str.h  camera_str.h  corridor_str.h  enemy_str.h  item_str.h  obj_wrapper_str.h  obstacle_str.h  player_str.h  projectile_str.h  ship_str.h  station_neighbors.h  station_ship_part_str.h  station_str.h  stats_str.h
include/ui/: button_ui.h  console_ui.h  control_ui.h  coordinates_ui.h  damage_ui.h  esc_ui.h  fps_ui.h  game_over_ui.h  general_ui.h  intermediate_ui.h  inventory_ui.h  item_ui.h  level_ui.h  loading_ui.h  main_menu_ui.h  radar_ui.h  render_ui.h  ship_parts_ui.h  skill_tree_ui.h  stallwarning_ui.h  stats_ui.h  target_ui.h  terminal_ui.h  waypoint_ui.h
include/ui/structs/: inventory_ui_str.h  ship_parts_ui_str.h  skill_tree_ui_str.h  stats_ui_str.h
src/: arena.c  audio.c  behavior.c  camera.c  collision.c  console.c  controls.c  enemy.c  game_over.c  globals.c  helpers.c  init.c  inventory.c  items.c  lexer.c  loading.c  main.c  mode.c  obj_wrapper.c  obstacle.c  parser.c  parts.c  player.c  projectile.c  rand.c  render.c  ship.c  ship_parts.c  station.c  stats.c  tick.c  timers.c
src/shaders/basic/: shader.fs  shader.vs
src/shaders/bone/: shader.fs  shader.vs
src/shaders/cubemap/: shader.fs  shader.vs
src/shaders/entity/: glow.fs  shader.fs  shader.vs
src/shaders/fire/: shader.fs  shader.vs
src/shaders/model/: shader.vs  station_sp.fs
src/shaders/projectile/: shader.fs  shader.vs
src/ui/: button_ui.c  console_ui.c  control_ui.c  coordinates_ui.c  damage_ui.c  esc_ui.c  fps_ui.c  game_over_ui.c  general_ui.c  intermediate_ui.c  inventory_ui.c  item_ui.c  level_ui.c  loading_ui.c  main_menu_ui.c  radar_ui.c  render_ui.c  ship_parts_ui.c  skill_tree_ui.c  stallwarning_ui.c  stats_ui.c  target_ui.c  terminal_ui.c  waypoint_ui.c
